[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/projectiles/laserRed01.png" type="Texture" id=1]
[ext_resource path="res://src/Projectiles/Laser.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/sfx/Laser_Shoot.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5, 5 )

[node name="Laser" type="Area2D" groups=["projectiles"]]
collision_layer = 16
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["laser_shots"]]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="Lifetime" type="Timer" parent="."]

[node name="LaserShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
